   pause for a queue member.
 * Show the time when started the last pause for queue member on CLI for command
   'queue show'.


------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.7.0 to Asterisk 13.8.0 ------------
------------------------------------------------------------------------------

res_pjsip_config_wizard
------------------
 * A new command (pjsip export config_wizard primitives) has been added that
   will export all the pjsip objects it created to the console or a file
   suitable for reuse in a pjsip.conf file.

app_confbridge
------------------
 * Added CONFBRIDGE_INFO(muted,) for querying the muted conference state.

 * Added Muted header to AMI ConfbridgeListRooms action response list events
   to indicate the muted conference state.

 * Added Muted column to CLI "confbridge list" output to indicate the muted
   conference state and made the locked column a yes/no value instead of a
   locked/unlocked value.

res_pjproject
------------------
 * This module is the successor of res_pjsip_log_forwarder.  As well as
   handling the log forwarding (which now displays as 'pjproject:0' instead
   of 'pjsip:0'), it also adds a 'pjproject show buildopts' command to the CLI.
   This displays the compiled-in options of the pjproject installation
   Asterisk is currently running against.

 * Another feature of this module is the ability to map pjproject log levels
   to Asterisk log levels, or to suppress the pjproject log messages
   altogether.  Many of the messages emitted by pjproject itself are the result
   of errors which Asterisk will ultimately handle so the messages can be
   misleading or just noise.  A new config file (pjproject.conf) has been added
   to configure the mapping and a new CLI command (pjproject show log mappings)
   has been added to display the mappings currently in use.

res_pjsip
------------------